--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
   <dependencyManagement>
     <dependencies>
+    
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
@@ -29,6 +30,13 @@
   </dependencyManagement>
 
   <dependencies>
+  <dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.3.0</version>
+    <scope>test</scope>
+</dependency>
+
   <dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
