--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     docker:
       # Specify the version you desire here
       # See: https://circleci.com/developer/images/image/cimg/openjdk
-      - image: cimg/openjdk:11.0
+      - image: cimg/openjdk:23.0.1
 
     # Add steps to the job
     # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
@@ -28,6 +28,18 @@ jobs:
       - run:
           name: Test
           command: mvn test
+          - run:
+          name: Calculadora
+          command: mvn -Dtest=CalculadoraTest test
+      - run:
+          name: Pruebas mockito
+          command: mvn -Dtest=UserServiceTest test
+      - run: 
+          name: Pruebas Katalon
+          command: mvn -Dtest=crudTest test
+      - store_test_results:
+          path: target/surefire-reports
+      # Then run your tests!
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
