--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,12 +13,16 @@ jobs:
       # Specify the version you desire here
       # See: https://circleci.com/developer/images/image/cimg/openjdk
       - image: cimg/openjdk:23.0.1-browsers
+    
 
     # Add steps to the job
     # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
     steps:
       # Checkout the code as the first step.
+      - browser-tools/install-browser-tools
       - checkout
+      - run: google-chrome --version
+      
 
       # Use mvn clean and package as the standard maven build phase
       - run:
